maybe this time vertical scrolling on mobile is fixed

--- a/src/components/Services/ServicesSection.css
+++ b/src/components/Services/ServicesSection.css
@@ -84,6 +84,12 @@
     scroll-behavior: smooth;
 }
 
+@media (hover: none) {
+    .services__items {
+        width: 100vh;
+    }
+}
+
 .services__items > * {
     scroll-snap-align: start;
 }
